project(Torque2D)
cmake_minimum_required(VERSION 2.8)
enable_language(ASM_NASM)

set(TORQUE2D_SRCDIR ${CMAKE_SOURCE_DIR}/../../source)
set(TORQUE2D_LIBDIR ${CMAKE_SOURCE_DIR}/../../lib)

set(TORQUE2D_SRCS
	${TORQUE2D_SRCDIR}/2d/assets/animationAsset.cc
	${TORQUE2D_SRCDIR}/2d/assets/animationController.cc
	${TORQUE2D_SRCDIR}/2d/assets/imageAsset.cc
	${TORQUE2D_SRCDIR}/2d/assets/particleAsset.cc
	${TORQUE2D_SRCDIR}/2d/assets/particleAssetEmitter.cc
	${TORQUE2D_SRCDIR}/2d/assets/particleAssetField.cc
	${TORQUE2D_SRCDIR}/2d/assets/particleAssetFieldCollection.cc
	${TORQUE2D_SRCDIR}/2d/core/batchRender.cc
	${TORQUE2D_SRCDIR}/2d/core/coreMath.cc
	${TORQUE2D_SRCDIR}/2d/core/particleSystem.cc
	${TORQUE2D_SRCDIR}/2d/core/renderProxy.cc
	${TORQUE2D_SRCDIR}/2d/core/spriteBase.cc
	${TORQUE2D_SRCDIR}/2d/core/spriteBatch.cc
	${TORQUE2D_SRCDIR}/2d/core/spriteBatchItem.cc
	${TORQUE2D_SRCDIR}/2d/core/spriteProxyBase.cc
	${TORQUE2D_SRCDIR}/2d/core/utility.cc
	${TORQUE2D_SRCDIR}/2d/core/vector2.cc
	${TORQUE2D_SRCDIR}/2d/gui/guiImageButtonCtrl.cc
	${TORQUE2D_SRCDIR}/2d/gui/guiSceneObjectCtrl.cc
	${TORQUE2D_SRCDIR}/2d/gui/guiSpriteCtrl.cc
	${TORQUE2D_SRCDIR}/2d/gui/sceneWindow.cc
	${TORQUE2D_SRCDIR}/2d/sceneobject/compositeSprite.cc
	${TORQUE2D_SRCDIR}/2d/sceneobject/imageFont.cc
	${TORQUE2D_SRCDIR}/2d/sceneobject/particlePlayer.cc
	${TORQUE2D_SRCDIR}/2d/sceneobject/sceneObject.cc
	${TORQUE2D_SRCDIR}/2d/sceneobject/scroller.cc
	${TORQUE2D_SRCDIR}/2d/sceneobject/shapeVector.cc
	${TORQUE2D_SRCDIR}/2d/sceneobject/sprite.cc
	${TORQUE2D_SRCDIR}/2d/sceneobject/trigger.cc
	${TORQUE2D_SRCDIR}/2d/scene/contactFilter.cc
	${TORQUE2D_SRCDIR}/2d/scene/debugDraw.cc
	${TORQUE2D_SRCDIR}/2d/scene/scene.cc
	${TORQUE2D_SRCDIR}/2d/scene/sceneRenderFactories.cpp
	${TORQUE2D_SRCDIR}/2d/scene/sceneRenderQueue.cpp
	${TORQUE2D_SRCDIR}/2d/scene/worldQuery.cc
	${TORQUE2D_SRCDIR}/algorithm/crc.cc
	${TORQUE2D_SRCDIR}/algorithm/hashFunction.cc
	${TORQUE2D_SRCDIR}/assets/assetBase.cc
	${TORQUE2D_SRCDIR}/assets/assetFieldTypes.cc
	${TORQUE2D_SRCDIR}/assets/assetManager.cc
	${TORQUE2D_SRCDIR}/assets/assetQuery.cc
	${TORQUE2D_SRCDIR}/assets/assetSnapshot.cc
	${TORQUE2D_SRCDIR}/assets/assetTagsManifest.cc
	${TORQUE2D_SRCDIR}/assets/declaredAssets.cc
	${TORQUE2D_SRCDIR}/assets/referencedAssets.cc
	${TORQUE2D_SRCDIR}/audio/audioAsset.cc
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2BroadPhase.cpp
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2CollideCircle.cpp
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2CollideEdge.cpp
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2CollidePolygon.cpp
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2Collision.cpp
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2Distance.cpp
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2DynamicTree.cpp
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2TimeOfImpact.cpp
	${TORQUE2D_SRCDIR}/Box2D/Collision/Shapes/b2ChainShape.cpp
	${TORQUE2D_SRCDIR}/Box2D/Collision/Shapes/b2CircleShape.cpp
	${TORQUE2D_SRCDIR}/Box2D/Collision/Shapes/b2EdgeShape.cpp
	${TORQUE2D_SRCDIR}/Box2D/Collision/Shapes/b2PolygonShape.cpp
	${TORQUE2D_SRCDIR}/Box2D/Common/b2BlockAllocator.cpp
	${TORQUE2D_SRCDIR}/Box2D/Common/b2Draw.cpp
	${TORQUE2D_SRCDIR}/Box2D/Common/b2Math.cpp
	${TORQUE2D_SRCDIR}/Box2D/Common/b2Settings.cpp
	${TORQUE2D_SRCDIR}/Box2D/Common/b2StackAllocator.cpp
	${TORQUE2D_SRCDIR}/Box2D/Common/b2Timer.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2Body.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2ContactManager.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2Fixture.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2Island.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2World.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2WorldCallbacks.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2CircleContact.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2Contact.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2ContactSolver.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2PolygonContact.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2DistanceJoint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2FrictionJoint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2GearJoint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2Joint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2MotorJoint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2MouseJoint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2PrismaticJoint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2PulleyJoint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2RevoluteJoint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2RopeJoint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2WeldJoint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2WheelJoint.cpp
	${TORQUE2D_SRCDIR}/Box2D/Rope/b2Rope.cpp
	${TORQUE2D_SRCDIR}/collection/bitTables.cc
	${TORQUE2D_SRCDIR}/collection/hashTable.cc
	${TORQUE2D_SRCDIR}/collection/nameTags.cpp
	${TORQUE2D_SRCDIR}/collection/undo.cc
	${TORQUE2D_SRCDIR}/collection/vector.cc
	${TORQUE2D_SRCDIR}/console/consoleBaseType.cc
	${TORQUE2D_SRCDIR}/console/consoleDictionary.cc
	${TORQUE2D_SRCDIR}/console/consoleExprEvalState.cc
	${TORQUE2D_SRCDIR}/console/consoleNamespace.cc
	${TORQUE2D_SRCDIR}/console/consoleTypeValidators.cc
	${TORQUE2D_SRCDIR}/debug/profiler.cc
	${TORQUE2D_SRCDIR}/debug/remote/remoteDebugger1.cc
	${TORQUE2D_SRCDIR}/debug/remote/remoteDebuggerBase.cc
	${TORQUE2D_SRCDIR}/debug/remote/remoteDebuggerBridge.cc
	${TORQUE2D_SRCDIR}/debug/telnetDebugger.cc
	${TORQUE2D_SRCDIR}/delegates/delegateSignal.cpp
	${TORQUE2D_SRCDIR}/game/defaultGame.cc
	${TORQUE2D_SRCDIR}/game/gameInterface.cc
	${TORQUE2D_SRCDIR}/graphics/bitmapBmp.cc
	${TORQUE2D_SRCDIR}/graphics/bitmapJpeg.cc
	${TORQUE2D_SRCDIR}/graphics/bitmapPng.cc
	${TORQUE2D_SRCDIR}/graphics/color.cc
	${TORQUE2D_SRCDIR}/graphics/dgl.cc
	${TORQUE2D_SRCDIR}/graphics/dglMatrix.cc
	${TORQUE2D_SRCDIR}/graphics/dynamicTexture.cc
	${TORQUE2D_SRCDIR}/graphics/gBitmap.cc
	${TORQUE2D_SRCDIR}/graphics/gFont.cc
	${TORQUE2D_SRCDIR}/graphics/gPalette.cc
	${TORQUE2D_SRCDIR}/graphics/pngImage.cpp
	${TORQUE2D_SRCDIR}/graphics/splineUtil.cc
	${TORQUE2D_SRCDIR}/graphics/textureDictionary.cc
	${TORQUE2D_SRCDIR}/graphics/textureHandle.cc
	${TORQUE2D_SRCDIR}/graphics/textureManager.cc
	${TORQUE2D_SRCDIR}/gui/guiArrayCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiBackgroundCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiBitmapBorderCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiBitmapCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiBubbleTextCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiCanvas.cc
	${TORQUE2D_SRCDIR}/gui/guiColorPicker.cc
	${TORQUE2D_SRCDIR}/gui/guiConsole.cc
	${TORQUE2D_SRCDIR}/gui/guiConsoleEditCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiConsoleTextCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiControl.cc
	${TORQUE2D_SRCDIR}/gui/guiDefaultControlRender.cc
	${TORQUE2D_SRCDIR}/gui/guiFadeinBitmapCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiInputCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiListBoxCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiMessageVectorCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiMLTextCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiMLTextEditCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiMouseEventCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiPopUpCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiPopUpCtrlEx.cc
	${TORQUE2D_SRCDIR}/gui/guiProgressCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiScriptNotifyControl.cc
	${TORQUE2D_SRCDIR}/gui/guiSliderCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiTabPageCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiTextCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiTextEditCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiTextEditSliderCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiTextListCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiTickCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiTreeViewCtrl.cc
	${TORQUE2D_SRCDIR}/gui/guiTypes.cc
	${TORQUE2D_SRCDIR}/gui/language/lang.cc
	${TORQUE2D_SRCDIR}/gui/messageVector.cc
	${TORQUE2D_SRCDIR}/input/actionMap.cc
	${TORQUE2D_SRCDIR}/io/bitStream.cc
	${TORQUE2D_SRCDIR}/io/bufferStream.cc
	${TORQUE2D_SRCDIR}/io/fileObject.cc
	${TORQUE2D_SRCDIR}/io/fileStream.cc
	${TORQUE2D_SRCDIR}/io/fileStreamObject.cc
	${TORQUE2D_SRCDIR}/io/fileSystemFunctions.cpp
	${TORQUE2D_SRCDIR}/io/filterStream.cc
	${TORQUE2D_SRCDIR}/io/memStream.cc
	${TORQUE2D_SRCDIR}/io/nStream.cc
	${TORQUE2D_SRCDIR}/io/resizeStream.cc
	${TORQUE2D_SRCDIR}/io/resource/resourceDictionary.cc
	${TORQUE2D_SRCDIR}/io/resource/resourceManager.cc
	${TORQUE2D_SRCDIR}/io/streamObject.cc
	${TORQUE2D_SRCDIR}/io/zip/centralDir.cc
	${TORQUE2D_SRCDIR}/io/zip/compressor.cc
	${TORQUE2D_SRCDIR}/io/zip/deflate.cc
	${TORQUE2D_SRCDIR}/io/zip/extraField.cc
	${TORQUE2D_SRCDIR}/io/zip/fileHeader.cc
	${TORQUE2D_SRCDIR}/io/zip/stored.cc
	${TORQUE2D_SRCDIR}/io/zip/zipArchive.cc
	${TORQUE2D_SRCDIR}/io/zip/zipCryptStream.cc
	${TORQUE2D_SRCDIR}/io/zip/zipObject.cc
	${TORQUE2D_SRCDIR}/io/zip/zipSubStream.cc
	${TORQUE2D_SRCDIR}/io/zip/zipTempStream.cc
	${TORQUE2D_SRCDIR}/math/rectClipper.cpp
	${TORQUE2D_SRCDIR}/memory/dataChunker.cc
	${TORQUE2D_SRCDIR}/memory/frameAllocator.cc
	${TORQUE2D_SRCDIR}/messaging/dispatcher.cc
	${TORQUE2D_SRCDIR}/messaging/eventManager.cc
	${TORQUE2D_SRCDIR}/messaging/message.cc
	${TORQUE2D_SRCDIR}/messaging/messageForwarder.cc
	${TORQUE2D_SRCDIR}/messaging/scriptMsgListener.cc
	${TORQUE2D_SRCDIR}/module/moduleDefinition.cc
	${TORQUE2D_SRCDIR}/module/moduleManager.cc
	${TORQUE2D_SRCDIR}/module/moduleMergeDefinition.cc
	${TORQUE2D_SRCDIR}/network/connectionProtocol.cc
	${TORQUE2D_SRCDIR}/network/connectionStringTable.cc
	${TORQUE2D_SRCDIR}/network/httpObject.cc
	${TORQUE2D_SRCDIR}/network/netConnection.cc
	${TORQUE2D_SRCDIR}/network/netDownload.cc
	${TORQUE2D_SRCDIR}/network/netEvent.cc
	${TORQUE2D_SRCDIR}/network/netGhost.cc
	${TORQUE2D_SRCDIR}/network/netInterface.cc
	${TORQUE2D_SRCDIR}/network/netObject.cc
	${TORQUE2D_SRCDIR}/network/netStringTable.cc
	${TORQUE2D_SRCDIR}/network/netTest.cc
	${TORQUE2D_SRCDIR}/network/networkProcessList.cc
	${TORQUE2D_SRCDIR}/network/remoteCommandEvent.cc
	${TORQUE2D_SRCDIR}/network/serverQuery.cc
	${TORQUE2D_SRCDIR}/network/tcpObject.cc
	${TORQUE2D_SRCDIR}/network/telnetConsole.cc
	${TORQUE2D_SRCDIR}/persistence/taml/taml.cc
	${TORQUE2D_SRCDIR}/persistence/taml/tamlBinaryReader.cc
	${TORQUE2D_SRCDIR}/persistence/taml/tamlBinaryWriter.cc
	${TORQUE2D_SRCDIR}/persistence/taml/tamlCustom.cc
	${TORQUE2D_SRCDIR}/persistence/taml/tamlWriteNode.cc
	${TORQUE2D_SRCDIR}/persistence/taml/tamlXmlParser.cc
	${TORQUE2D_SRCDIR}/persistence/taml/tamlXmlReader.cc
	${TORQUE2D_SRCDIR}/persistence/taml/tamlXmlWriter.cc
	${TORQUE2D_SRCDIR}/persistence/tinyXML/tinystr.cpp
	${TORQUE2D_SRCDIR}/persistence/tinyXML/tinyxml.cpp
	${TORQUE2D_SRCDIR}/persistence/tinyXML/tinyxmlerror.cpp
	${TORQUE2D_SRCDIR}/persistence/tinyXML/tinyxmlparser.cpp
	${TORQUE2D_SRCDIR}/audio/audio.cc
	${TORQUE2D_SRCDIR}/audio/audioBuffer.cc
	${TORQUE2D_SRCDIR}/audio/audioDataBlock.cc
	${TORQUE2D_SRCDIR}/audio/audioFunctions.cc
	${TORQUE2D_SRCDIR}/audio/audioStreamSourceFactory.cc
	${TORQUE2D_SRCDIR}/audio/wavStreamSource.cc
	${TORQUE2D_SRCDIR}/component/dynamicConsoleMethodComponent.cpp
	${TORQUE2D_SRCDIR}/component/simComponent.cpp
	${TORQUE2D_SRCDIR}/component/behaviors/behaviorComponent.cpp
	${TORQUE2D_SRCDIR}/component/behaviors/behaviorInstance.cpp
	${TORQUE2D_SRCDIR}/component/behaviors/behaviorTemplate.cpp
	${TORQUE2D_SRCDIR}/console/astAlloc.cc
	${TORQUE2D_SRCDIR}/console/astNodes.cc
	${TORQUE2D_SRCDIR}/console/cmdgram.cc
	${TORQUE2D_SRCDIR}/console/cmdscan.cc
	${TORQUE2D_SRCDIR}/console/codeBlock.cc
	${TORQUE2D_SRCDIR}/console/compiledEval.cc
	${TORQUE2D_SRCDIR}/console/compiler.cc
	${TORQUE2D_SRCDIR}/console/console.cc
	${TORQUE2D_SRCDIR}/console/consoleDoc.cc
	${TORQUE2D_SRCDIR}/console/consoleFunctions.cc
	${TORQUE2D_SRCDIR}/console/consoleLogger.cc
	${TORQUE2D_SRCDIR}/console/consoleObject.cc
	${TORQUE2D_SRCDIR}/console/consoleParser.cc
	${TORQUE2D_SRCDIR}/console/consoleTypes.cc
	${TORQUE2D_SRCDIR}/game/gameConnection.cc
	${TORQUE2D_SRCDIR}/game/version.cc
	${TORQUE2D_SRCDIR}/math/mathTypes.cc
	${TORQUE2D_SRCDIR}/math/mathUtils.cc
	${TORQUE2D_SRCDIR}/math/mBox.cc
	${TORQUE2D_SRCDIR}/math/mConsoleFunctions.cc
	${TORQUE2D_SRCDIR}/math/mMath_ASM.asm
	${TORQUE2D_SRCDIR}/math/mMath_C.cc
	${TORQUE2D_SRCDIR}/math/mMathAltivec.cc
	${TORQUE2D_SRCDIR}/math/mMathAMD.cc
	${TORQUE2D_SRCDIR}/math/mMathAMD_ASM.asm
	${TORQUE2D_SRCDIR}/math/mMathFn.cc
	${TORQUE2D_SRCDIR}/math/mMathSSE.cc
	${TORQUE2D_SRCDIR}/math/mMathSSE_ASM.asm
	${TORQUE2D_SRCDIR}/math/mMatrix.cc
	${TORQUE2D_SRCDIR}/math/mPlaneTransformer.cc
	${TORQUE2D_SRCDIR}/math/mQuadPatch.cc
	${TORQUE2D_SRCDIR}/math/mQuat.cc
	${TORQUE2D_SRCDIR}/math/mRandom.cc
	${TORQUE2D_SRCDIR}/math/mSolver.cc
	${TORQUE2D_SRCDIR}/math/mSplinePatch.cc
	${TORQUE2D_SRCDIR}/persistence/simXMLDocument.cpp
	${TORQUE2D_SRCDIR}/platform/cursorManager.cc
	${TORQUE2D_SRCDIR}/platform/nativeDialogs/fileDialog.cc
	${TORQUE2D_SRCDIR}/platform/platform.cc
	${TORQUE2D_SRCDIR}/platform/platformAssert.cc
	${TORQUE2D_SRCDIR}/platform/platformCPU.cc
	${TORQUE2D_SRCDIR}/platform/platformCPUInfo.asm
	${TORQUE2D_SRCDIR}/platform/platformFileIO.cc
	${TORQUE2D_SRCDIR}/platform/platformFont.cc
	${TORQUE2D_SRCDIR}/platform/platformMemory.cc
	${TORQUE2D_SRCDIR}/platform/platformNetwork.cc
	${TORQUE2D_SRCDIR}/platform/platformString.cc
	${TORQUE2D_SRCDIR}/platform/platformVideo.cc
	${TORQUE2D_SRCDIR}/platform/menus/popupMenu.cc
	${TORQUE2D_SRCDIR}/platform/nativeDialogs/msgBox.cpp
	${TORQUE2D_SRCDIR}/platform/tickable.cc
	${TORQUE2D_SRCDIR}/sim/scriptGroup.cc
	${TORQUE2D_SRCDIR}/sim/scriptObject.cc
	${TORQUE2D_SRCDIR}/sim/simBase.cc
	${TORQUE2D_SRCDIR}/sim/simConsoleEvent.cc
	${TORQUE2D_SRCDIR}/sim/simConsoleThreadExecEvent.cc
	${TORQUE2D_SRCDIR}/sim/simDatablock.cc
	${TORQUE2D_SRCDIR}/sim/simDictionary.cc
	${TORQUE2D_SRCDIR}/sim/simFieldDictionary.cc
	${TORQUE2D_SRCDIR}/sim/simManager.cc
	${TORQUE2D_SRCDIR}/sim/simObject.cc
	${TORQUE2D_SRCDIR}/sim/simObjectList.cc
	${TORQUE2D_SRCDIR}/sim/simSerialize.cpp
	${TORQUE2D_SRCDIR}/sim/simSet.cc
	${TORQUE2D_SRCDIR}/string/findMatch.cc
	${TORQUE2D_SRCDIR}/string/stringBuffer.cc
	${TORQUE2D_SRCDIR}/string/stringStack.cc
	${TORQUE2D_SRCDIR}/string/stringTable.cc
	${TORQUE2D_SRCDIR}/string/stringUnit.cpp
	${TORQUE2D_SRCDIR}/string/unicode.cc
	${TORQUE2D_SRCDIR}/gui/buttons/guiBitmapButtonCtrl.cc
	${TORQUE2D_SRCDIR}/gui/buttons/guiBorderButton.cc
	${TORQUE2D_SRCDIR}/gui/buttons/guiButtonBaseCtrl.cc
	${TORQUE2D_SRCDIR}/gui/buttons/guiButtonCtrl.cc
	${TORQUE2D_SRCDIR}/gui/buttons/guiCheckBoxCtrl.cc
	${TORQUE2D_SRCDIR}/gui/buttons/guiIconButtonCtrl.cc
	${TORQUE2D_SRCDIR}/gui/buttons/guiRadioCtrl.cc
	${TORQUE2D_SRCDIR}/gui/buttons/guiToolboxButtonCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiAutoScrollCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiCtrlArrayCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiDragAndDropCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiDynamicCtrlArrayCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiFormCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiFrameCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiPaneCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiRolloutCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiScrollCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiStackCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiTabBookCtrl.cc
	${TORQUE2D_SRCDIR}/gui/containers/guiWindowCtrl.cc
	${TORQUE2D_SRCDIR}/gui/editor/guiControlListPopup.cc
	${TORQUE2D_SRCDIR}/gui/editor/guiDebugger.cc
	${TORQUE2D_SRCDIR}/gui/editor/guiEditCtrl.cc
	${TORQUE2D_SRCDIR}/gui/editor/guiFilterCtrl.cc
	${TORQUE2D_SRCDIR}/gui/editor/guiGraphCtrl.cc
	${TORQUE2D_SRCDIR}/gui/editor/guiImageList.cc
	${TORQUE2D_SRCDIR}/gui/editor/guiInspector.cc
	${TORQUE2D_SRCDIR}/gui/editor/guiInspectorTypes.cc
	${TORQUE2D_SRCDIR}/gui/editor/guiMenuBar.cc
	${TORQUE2D_SRCDIR}/gui/editor/guiSeparatorCtrl.cc
	${TORQUE2D_SRCDIR}/testing/tests/platformFileIoTests.cc
	${TORQUE2D_SRCDIR}/testing/tests/platformMemoryTests.cc
	${TORQUE2D_SRCDIR}/testing/tests/platformStringTests.cc
	${TORQUE2D_SRCDIR}/testing/unitTesting.cc
)

set(TORQUE2D_HEADERS
	${TORQUE2D_SRCDIR}/2d/assets/animationAsset.h
	${TORQUE2D_SRCDIR}/2d/assets/animationAsset_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/assets/animationController.h
	${TORQUE2D_SRCDIR}/2d/assets/imageAsset.h
	${TORQUE2D_SRCDIR}/2d/assets/imageAsset_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/assets/particleAsset.h
	${TORQUE2D_SRCDIR}/2d/assets/particleAssetEmitter.h
	${TORQUE2D_SRCDIR}/2d/assets/particleAssetEmitter_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/assets/particleAssetField.h
	${TORQUE2D_SRCDIR}/2d/assets/particleAssetFieldCollection.h
	${TORQUE2D_SRCDIR}/2d/assets/particleAsset_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/core/batchRender.h
	${TORQUE2D_SRCDIR}/2d/core/coreMath.h
	${TORQUE2D_SRCDIR}/2d/core/particleSystem.h
	${TORQUE2D_SRCDIR}/2d/core/renderProxy.h
	${TORQUE2D_SRCDIR}/2d/core/renderProxy_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/core/spriteBase.h
	${TORQUE2D_SRCDIR}/2d/core/spriteBase_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/core/spriteBatch.h
	${TORQUE2D_SRCDIR}/2d/core/spriteBatchItem.h
	${TORQUE2D_SRCDIR}/2d/core/spriteProxyBase.h
	${TORQUE2D_SRCDIR}/2d/core/utility.h
	${TORQUE2D_SRCDIR}/2d/core/vector2.h
	${TORQUE2D_SRCDIR}/2d/core/vector2_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/gui/guiImageButtonCtrl.h
	${TORQUE2D_SRCDIR}/2d/gui/guiImageButtonCtrl_ScriptBindings.h
	${TORQUE2D_SRCDIR}/2d/gui/guiSceneObjectCtrl.h
	${TORQUE2D_SRCDIR}/2d/gui/guiSpriteCtrl.h
	${TORQUE2D_SRCDIR}/2d/gui/guiSpriteCtrl_ScriptBindings.h
	${TORQUE2D_SRCDIR}/2d/gui/sceneWindow.h
	${TORQUE2D_SRCDIR}/2d/gui/sceneWindow_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/compositeSprite.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/compositeSprite_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/imageFont.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/imageFont_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/particlePlayer.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/particlePlayer_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/sceneObject.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/sceneObjectMoveToEvent.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/sceneObjectRotateToEvent.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/sceneObjectTimerEvent.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/sceneObject_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/scroller.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/scroller_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/shapeVector.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/shapeVector_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/sprite.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/sprite_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/trigger.h
	${TORQUE2D_SRCDIR}/2d/sceneobject/trigger_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/scene/contactFilter.h
	${TORQUE2D_SRCDIR}/2d/scene/debugDraw.h
	${TORQUE2D_SRCDIR}/2d/scene/debugStats.h
	${TORQUE2D_SRCDIR}/2d/scene/physicsProxy.h
	${TORQUE2D_SRCDIR}/2d/scene/scene.h
	${TORQUE2D_SRCDIR}/2d/scene/sceneRenderFactories.h
	${TORQUE2D_SRCDIR}/2d/scene/sceneRenderObject.h
	${TORQUE2D_SRCDIR}/2d/scene/sceneRenderQueue.h
	${TORQUE2D_SRCDIR}/2d/scene/sceneRenderRequest.h
	${TORQUE2D_SRCDIR}/2d/scene/sceneRenderState.h
	${TORQUE2D_SRCDIR}/2d/scene/scene_ScriptBinding.h
	${TORQUE2D_SRCDIR}/2d/scene/worldQuery.h
	${TORQUE2D_SRCDIR}/2d/scene/worldQueryFilter.h
	${TORQUE2D_SRCDIR}/2d/scene/worldQueryResult.h
	${TORQUE2D_SRCDIR}/algorithm/crc.h
	${TORQUE2D_SRCDIR}/algorithm/crctab.h
	${TORQUE2D_SRCDIR}/algorithm/hashFunction.h
	${TORQUE2D_SRCDIR}/algorithm/md5.h
	${TORQUE2D_SRCDIR}/assets/assetBase.h
	${TORQUE2D_SRCDIR}/assets/assetBase_ScriptBinding.h
	${TORQUE2D_SRCDIR}/assets/assetDefinition.h
	${TORQUE2D_SRCDIR}/assets/assetFieldTypes.h
	${TORQUE2D_SRCDIR}/assets/assetManager.h
	${TORQUE2D_SRCDIR}/assets/assetManager_ScriptBinding.h
	${TORQUE2D_SRCDIR}/assets/assetPtr.h
	${TORQUE2D_SRCDIR}/assets/assetQuery.h
	${TORQUE2D_SRCDIR}/assets/assetQuery_ScriptBinding.h
	${TORQUE2D_SRCDIR}/assets/assetSnapshot.h
	${TORQUE2D_SRCDIR}/assets/assetTagsManifest.h
	${TORQUE2D_SRCDIR}/assets/assetTagsManifest_ScriptBinding.h
	${TORQUE2D_SRCDIR}/assets/declaredAssets.h
	${TORQUE2D_SRCDIR}/assets/referencedAssets.h
	${TORQUE2D_SRCDIR}/assets/tamlAssetDeclaredUpdateVisitor.h
	${TORQUE2D_SRCDIR}/assets/tamlAssetDeclaredVisitor.h
	${TORQUE2D_SRCDIR}/assets/tamlAssetReferencedUpdateVisitor.h
	${TORQUE2D_SRCDIR}/assets/tamlAssetReferencedVisitor.h
	${TORQUE2D_SRCDIR}/audio/audioAsset.h
	${TORQUE2D_SRCDIR}/Box2D/Box2D.h
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2BroadPhase.h
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2Collision.h
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2Distance.h
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2DynamicTree.h
	${TORQUE2D_SRCDIR}/Box2D/Collision/b2TimeOfImpact.h
	${TORQUE2D_SRCDIR}/Box2D/Collision/Shapes/b2ChainShape.h
	${TORQUE2D_SRCDIR}/Box2D/Collision/Shapes/b2CircleShape.h
	${TORQUE2D_SRCDIR}/Box2D/Collision/Shapes/b2EdgeShape.h
	${TORQUE2D_SRCDIR}/Box2D/Collision/Shapes/b2PolygonShape.h
	${TORQUE2D_SRCDIR}/Box2D/Collision/Shapes/b2Shape.h
	${TORQUE2D_SRCDIR}/Box2D/Common/b2BlockAllocator.h
	${TORQUE2D_SRCDIR}/Box2D/Common/b2Draw.h
	${TORQUE2D_SRCDIR}/Box2D/Common/b2GrowableStack.h
	${TORQUE2D_SRCDIR}/Box2D/Common/b2Math.h
	${TORQUE2D_SRCDIR}/Box2D/Common/b2Settings.h
	${TORQUE2D_SRCDIR}/Box2D/Common/b2StackAllocator.h
	${TORQUE2D_SRCDIR}/Box2D/Common/b2Timer.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2Body.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2ContactManager.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2Fixture.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2Island.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2TimeStep.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2World.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/b2WorldCallbacks.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2CircleContact.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2Contact.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2ContactSolver.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Contacts/b2PolygonContact.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2DistanceJoint.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2FrictionJoint.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2GearJoint.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2Joint.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2MotorJoint.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2MouseJoint.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2PrismaticJoint.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2PulleyJoint.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2RevoluteJoint.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2RopeJoint.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2WeldJoint.h
	${TORQUE2D_SRCDIR}/Box2D/Dynamics/Joints/b2WheelJoint.h
	${TORQUE2D_SRCDIR}/Box2D/Rope/b2Rope.h
	${TORQUE2D_SRCDIR}/collection/bitMatrix.h
	${TORQUE2D_SRCDIR}/collection/bitSet.h
	${TORQUE2D_SRCDIR}/collection/bitTables.h
	${TORQUE2D_SRCDIR}/collection/bitVector.h
	${TORQUE2D_SRCDIR}/collection/bitVectorW.h
	${TORQUE2D_SRCDIR}/collection/findIterator.h
	${TORQUE2D_SRCDIR}/collection/hashTable.h
	${TORQUE2D_SRCDIR}/collection/linkedList.h
	${TORQUE2D_SRCDIR}/collection/nameTags.h
	${TORQUE2D_SRCDIR}/collection/nameTags_ScriptBinding.h
	${TORQUE2D_SRCDIR}/collection/simpleHashTable.h
	${TORQUE2D_SRCDIR}/collection/sparseArray.h
	${TORQUE2D_SRCDIR}/collection/undo.h
	${TORQUE2D_SRCDIR}/collection/vector.h
	${TORQUE2D_SRCDIR}/collection/vector2d.h
	${TORQUE2D_SRCDIR}/collection/vectorHeap.h
	${TORQUE2D_SRCDIR}/collection/vectorQueue.h
	${TORQUE2D_SRCDIR}/component/behaviors/behaviorComponentRaiseEvent.h
	${TORQUE2D_SRCDIR}/component/behaviors/behaviorComponent_ScriptBinding.h
	${TORQUE2D_SRCDIR}/component/behaviors/behaviorInstance_ScriptBinding.h
	${TORQUE2D_SRCDIR}/component/behaviors/behaviorTemplate_ScriptBinding.h
	${TORQUE2D_SRCDIR}/console/consoleBaseType.h
	${TORQUE2D_SRCDIR}/console/consoleDictionary.h
	${TORQUE2D_SRCDIR}/console/consoleExprEvalState.h
	${TORQUE2D_SRCDIR}/console/consoleInternal.h
	${TORQUE2D_SRCDIR}/console/consoleNamespace.h
	${TORQUE2D_SRCDIR}/console/consoleTypeValidators.h
	${TORQUE2D_SRCDIR}/debug/profiler.h
	${TORQUE2D_SRCDIR}/debug/remote/remoteDebugger1.h
	${TORQUE2D_SRCDIR}/debug/remote/remoteDebugger1_ScriptBinding.h
	${TORQUE2D_SRCDIR}/debug/remote/remoteDebuggerBase.h
	${TORQUE2D_SRCDIR}/debug/remote/remoteDebuggerBase_ScriptBinding.h
	${TORQUE2D_SRCDIR}/debug/remote/remoteDebuggerBridge.h
	${TORQUE2D_SRCDIR}/debug/remote/remoteDebuggerBridge_ScriptBinding.h
	${TORQUE2D_SRCDIR}/debug/telnetDebugger.h
	${TORQUE2D_SRCDIR}/delegates/delegate.h
	${TORQUE2D_SRCDIR}/delegates/delegateSignal.h
	${TORQUE2D_SRCDIR}/delegates/fastDelegate.h
	${TORQUE2D_SRCDIR}/game/defaultGame.h
	${TORQUE2D_SRCDIR}/game/gameInterface.h
	${TORQUE2D_SRCDIR}/game/gameInterface_ScriptBinding.h
	${TORQUE2D_SRCDIR}/graphics/color.h
	${TORQUE2D_SRCDIR}/graphics/dgl.h
	${TORQUE2D_SRCDIR}/graphics/dynamicTexture.h
	${TORQUE2D_SRCDIR}/graphics/gBitmap.h
	${TORQUE2D_SRCDIR}/graphics/gFont.h
	${TORQUE2D_SRCDIR}/graphics/gPalette.h
	${TORQUE2D_SRCDIR}/graphics/pngImage.h
	${TORQUE2D_SRCDIR}/graphics/splineUtil.h
	${TORQUE2D_SRCDIR}/graphics/textureDictionary.h
	${TORQUE2D_SRCDIR}/graphics/textureHandle.h
	${TORQUE2D_SRCDIR}/graphics/textureManager.h
	${TORQUE2D_SRCDIR}/graphics/textureObject.h
	${TORQUE2D_SRCDIR}/gui/guiArrayCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiBackgroundCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiBitmapCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiBubbleTextCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiCanvas.h
	${TORQUE2D_SRCDIR}/gui/guiColorPicker.h
	${TORQUE2D_SRCDIR}/gui/guiConsole.h
	${TORQUE2D_SRCDIR}/gui/guiConsoleEditCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiConsoleTextCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiControl.h
	${TORQUE2D_SRCDIR}/gui/guiDefaultControlRender.h
	${TORQUE2D_SRCDIR}/gui/guiInputCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiListBoxCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiMessageVectorCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiMLTextCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiMLTextEditCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiMouseEventCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiPopUpCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiPopUpCtrlEx.h
	${TORQUE2D_SRCDIR}/gui/guiProgressCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiScriptNotifyControl.h
	${TORQUE2D_SRCDIR}/gui/guiSliderCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiTabPageCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiTextCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiTextEditCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiTextEditSliderCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiTextListCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiTickCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiTreeViewCtrl.h
	${TORQUE2D_SRCDIR}/gui/guiTypes.h
	${TORQUE2D_SRCDIR}/gui/language/lang.h
	${TORQUE2D_SRCDIR}/gui/messageVector.h
	${TORQUE2D_SRCDIR}/input/actionMap.h
	${TORQUE2D_SRCDIR}/io/bitStream.h
	${TORQUE2D_SRCDIR}/io/bufferStream.h
	${TORQUE2D_SRCDIR}/io/fileObject.h
	${TORQUE2D_SRCDIR}/io/fileStream.h
	${TORQUE2D_SRCDIR}/io/fileStreamObject.h
	${TORQUE2D_SRCDIR}/io/filterStream.h
	${TORQUE2D_SRCDIR}/io/memstream.h
	${TORQUE2D_SRCDIR}/io/resizeStream.h
	${TORQUE2D_SRCDIR}/io/resource/resourceManager.h
	${TORQUE2D_SRCDIR}/io/stream.h
	${TORQUE2D_SRCDIR}/io/streamObject.h
	${TORQUE2D_SRCDIR}/io/zip/centralDir.h
	${TORQUE2D_SRCDIR}/io/zip/compressor.h
	${TORQUE2D_SRCDIR}/io/zip/extraField.h
	${TORQUE2D_SRCDIR}/io/zip/fileHeader.h
	${TORQUE2D_SRCDIR}/io/zip/zipArchive.h
	${TORQUE2D_SRCDIR}/io/zip/zipCryptStream.h
	${TORQUE2D_SRCDIR}/io/zip/zipObject.h
	${TORQUE2D_SRCDIR}/io/zip/zipStatFilter.h
	${TORQUE2D_SRCDIR}/io/zip/zipSubStream.h
	${TORQUE2D_SRCDIR}/io/zip/zipTempStream.h
	${TORQUE2D_SRCDIR}/math/rectClipper.h
	${TORQUE2D_SRCDIR}/memory/dataChunker.h
	${TORQUE2D_SRCDIR}/memory/factoryCache.h
	${TORQUE2D_SRCDIR}/memory/frameAllocator.h
	${TORQUE2D_SRCDIR}/memory/safeDelete.h
	${TORQUE2D_SRCDIR}/messaging/dispatcher.h
	${TORQUE2D_SRCDIR}/messaging/eventManager.h
	${TORQUE2D_SRCDIR}/messaging/message.h
	${TORQUE2D_SRCDIR}/messaging/messageForwarder.h
	${TORQUE2D_SRCDIR}/messaging/scriptMsgListener.h
	${TORQUE2D_SRCDIR}/module/moduleCallbacks.h
	${TORQUE2D_SRCDIR}/module/moduleDefinition.h
	${TORQUE2D_SRCDIR}/module/moduleDefinition_ScriptBinding.h
	${TORQUE2D_SRCDIR}/module/moduleManager.h
	${TORQUE2D_SRCDIR}/module/moduleManager_ScriptBinding.h
	${TORQUE2D_SRCDIR}/module/moduleMergeDefinition.h
	${TORQUE2D_SRCDIR}/module/tamlModuleIdUpdateVisitor.h
	${TORQUE2D_SRCDIR}/network/connectionProtocol.h
	${TORQUE2D_SRCDIR}/network/connectionStringTable.h
	${TORQUE2D_SRCDIR}/network/httpObject.h
	${TORQUE2D_SRCDIR}/network/netConnection.h
	${TORQUE2D_SRCDIR}/network/netInterface.h
	${TORQUE2D_SRCDIR}/network/netObject.h
	${TORQUE2D_SRCDIR}/network/netStringTable.h
	${TORQUE2D_SRCDIR}/network/networkProcessList.h
	${TORQUE2D_SRCDIR}/network/serverQuery.h
	${TORQUE2D_SRCDIR}/network/tcpObject.h
	${TORQUE2D_SRCDIR}/network/telnetConsole.h
	${TORQUE2D_SRCDIR}/persistence/taml/taml.h
	${TORQUE2D_SRCDIR}/persistence/taml/tamlBinaryReader.h
	${TORQUE2D_SRCDIR}/persistence/taml/tamlBinaryWriter.h
	${TORQUE2D_SRCDIR}/persistence/taml/tamlCallbacks.h
	${TORQUE2D_SRCDIR}/persistence/taml/tamlChildren.h
	${TORQUE2D_SRCDIR}/persistence/taml/tamlCustom.h
	${TORQUE2D_SRCDIR}/persistence/taml/tamlWriteNode.h
	${TORQUE2D_SRCDIR}/persistence/taml/tamlXmlParser.h
	${TORQUE2D_SRCDIR}/persistence/taml/tamlXmlReader.h
	${TORQUE2D_SRCDIR}/persistence/taml/tamlXmlVisitor.h
	${TORQUE2D_SRCDIR}/persistence/taml/tamlXmlWriter.h
	${TORQUE2D_SRCDIR}/persistence/taml/taml_ScriptBinding.h
	${TORQUE2D_SRCDIR}/persistence/tinyXML/tinystr.h
	${TORQUE2D_SRCDIR}/persistence/tinyXML/tinyxml.h
	${TORQUE2D_SRCDIR}/audio/audio.h
	${TORQUE2D_SRCDIR}/audio/audioBuffer.h
	${TORQUE2D_SRCDIR}/audio/audioDataBlock.h
	${TORQUE2D_SRCDIR}/audio/audioStreamSource.h
	${TORQUE2D_SRCDIR}/audio/audioStreamSourceFactory.h
	${TORQUE2D_SRCDIR}/audio/wavStreamSource.h
	${TORQUE2D_SRCDIR}/component/dynamicConsoleMethodComponent.h
	${TORQUE2D_SRCDIR}/component/simComponent.h
	${TORQUE2D_SRCDIR}/component/behaviors/behaviorComponent.h
	${TORQUE2D_SRCDIR}/component/behaviors/behaviorInstance.h
	${TORQUE2D_SRCDIR}/component/behaviors/behaviorTemplate.h
	${TORQUE2D_SRCDIR}/console/ast.h
	${TORQUE2D_SRCDIR}/console/astNodeSizes.h
	${TORQUE2D_SRCDIR}/console/cmdgram.h
	${TORQUE2D_SRCDIR}/console/codeBlock.h
	${TORQUE2D_SRCDIR}/console/compiler.h
	${TORQUE2D_SRCDIR}/console/console.h
	${TORQUE2D_SRCDIR}/console/consoleDoc.h
	${TORQUE2D_SRCDIR}/console/consoleLogger.h
	${TORQUE2D_SRCDIR}/console/consoleObject.h
	${TORQUE2D_SRCDIR}/console/consoleParser.h
	${TORQUE2D_SRCDIR}/console/consoleTypes.h
	${TORQUE2D_SRCDIR}/game/gameConnection.h
	${TORQUE2D_SRCDIR}/game/resource.h
	${TORQUE2D_SRCDIR}/game/version.h
	${TORQUE2D_SRCDIR}/math/mathIO.h
	${TORQUE2D_SRCDIR}/math/mathTypes.h
	${TORQUE2D_SRCDIR}/math/mathUtils.h
	${TORQUE2D_SRCDIR}/math/mBox.h
	${TORQUE2D_SRCDIR}/math/mConstants.h
	${TORQUE2D_SRCDIR}/math/mMath.h
	${TORQUE2D_SRCDIR}/math/mMathFn.h
	${TORQUE2D_SRCDIR}/math/mMatrix.h
	${TORQUE2D_SRCDIR}/math/mPlane.h
	${TORQUE2D_SRCDIR}/math/mPlaneTransformer.h
	${TORQUE2D_SRCDIR}/math/mPoint.h
	${TORQUE2D_SRCDIR}/math/mQuadPatch.h
	${TORQUE2D_SRCDIR}/math/mQuat.h
	${TORQUE2D_SRCDIR}/math/mRandom.h
	${TORQUE2D_SRCDIR}/math/mRect.h
	${TORQUE2D_SRCDIR}/math/mSphere.h
	${TORQUE2D_SRCDIR}/math/mSplinePatch.h
	${TORQUE2D_SRCDIR}/persistence/simXMLDocument.h
	${TORQUE2D_SRCDIR}/platformWin32/winWindow.h
	${TORQUE2D_SRCDIR}/platform/event.h
	${TORQUE2D_SRCDIR}/platform/glCoreFunc.h
	${TORQUE2D_SRCDIR}/platform/glExtFunc.h
	${TORQUE2D_SRCDIR}/platform/gluFunc.h
	${TORQUE2D_SRCDIR}/platform/platform.h
	${TORQUE2D_SRCDIR}/platform/platformAL.h
	${TORQUE2D_SRCDIR}/platform/platformAssert.h
	${TORQUE2D_SRCDIR}/platform/platformAudio.h
	${TORQUE2D_SRCDIR}/platform/platformCPU.h
	${TORQUE2D_SRCDIR}/platform/platformEndian.h
	${TORQUE2D_SRCDIR}/platform/platformFileIO.h
	${TORQUE2D_SRCDIR}/platform/platformFont.h
	${TORQUE2D_SRCDIR}/platform/platformGL.h
	${TORQUE2D_SRCDIR}/platform/platformInput.h
	${TORQUE2D_SRCDIR}/platform/platformInput_ScriptBinding.h
	${TORQUE2D_SRCDIR}/platform/platformMath.h
	${TORQUE2D_SRCDIR}/platform/platformMemory.h
	${TORQUE2D_SRCDIR}/platform/platformNetwork.h
	${TORQUE2D_SRCDIR}/platform/platformSemaphore.h
	${TORQUE2D_SRCDIR}/platform/platformString.h
	${TORQUE2D_SRCDIR}/platform/platformTimeManager.h
	${TORQUE2D_SRCDIR}/platform/platformTLS.h
	${TORQUE2D_SRCDIR}/platform/platformVFS.h
	${TORQUE2D_SRCDIR}/platform/platformVideo.h
	${TORQUE2D_SRCDIR}/platform/platform_ScriptBinding.h
	${TORQUE2D_SRCDIR}/platform/tickable.h
	${TORQUE2D_SRCDIR}/platform/types.codewarrior.h
	${TORQUE2D_SRCDIR}/platform/types.gcc.h
	${TORQUE2D_SRCDIR}/platform/types.h
	${TORQUE2D_SRCDIR}/platform/types.posix.h
	${TORQUE2D_SRCDIR}/platform/types.ppc.h
	${TORQUE2D_SRCDIR}/platform/types.visualc.h
	${TORQUE2D_SRCDIR}/platform/types.win32.h
	${TORQUE2D_SRCDIR}/platform/typesLinux.h
	${TORQUE2D_SRCDIR}/platform/typesPPC.h
	${TORQUE2D_SRCDIR}/platform/typesWin32.h
	${TORQUE2D_SRCDIR}/platform/typesX86UNIX.h
	${TORQUE2D_SRCDIR}/platform/menus/popupMenu.h
	${TORQUE2D_SRCDIR}/platform/nativeDialogs/fileDialog.h
	${TORQUE2D_SRCDIR}/platform/nativeDialogs/msgBox.h
	${TORQUE2D_SRCDIR}/platform/threads/mutex.h
	${TORQUE2D_SRCDIR}/platform/threads/semaphore.h
	${TORQUE2D_SRCDIR}/platform/threads/thread.h
	${TORQUE2D_SRCDIR}/platformWin32/gl_types.h
	${TORQUE2D_SRCDIR}/platformWin32/glWinExtFunc.h
	${TORQUE2D_SRCDIR}/platformWin32/glWinFunc.h
	${TORQUE2D_SRCDIR}/platformWin32/platformGL.h
	${TORQUE2D_SRCDIR}/platformWin32/platformWin32.h
	${TORQUE2D_SRCDIR}/platformWin32/vfsRes.h
	${TORQUE2D_SRCDIR}/platformWin32/win32NPatch.h
	${TORQUE2D_SRCDIR}/platformWin32/win_common_prefix.h
	${TORQUE2D_SRCDIR}/platformWin32/win_debug_prefix.h
	${TORQUE2D_SRCDIR}/platformWin32/win_release_prefix.h
	${TORQUE2D_SRCDIR}/platformWin32/winConsole.h
	${TORQUE2D_SRCDIR}/platformWin32/winDInputDevice.h
	${TORQUE2D_SRCDIR}/platformWin32/winDirectInput.h
	${TORQUE2D_SRCDIR}/platformWin32/winFont.h
	${TORQUE2D_SRCDIR}/platformWin32/winOGLVideo.h
	${TORQUE2D_SRCDIR}/platformWin32/winVideo.h
	${TORQUE2D_SRCDIR}/platformWin32/nativeDialogs/win32DirectoryResolver.h
	${TORQUE2D_SRCDIR}/sim/scriptGroup.h
	${TORQUE2D_SRCDIR}/sim/scriptObject.h
	${TORQUE2D_SRCDIR}/sim/simBase.h
	${TORQUE2D_SRCDIR}/sim/simConsoleEvent.h
	${TORQUE2D_SRCDIR}/sim/simConsoleThreadExecEvent.h
	${TORQUE2D_SRCDIR}/sim/simDatablock.h
	${TORQUE2D_SRCDIR}/sim/simDatablockGroup.h
	${TORQUE2D_SRCDIR}/sim/simDictionary.h
	${TORQUE2D_SRCDIR}/sim/simEvent.h
	${TORQUE2D_SRCDIR}/sim/simFieldDictionary.h
	${TORQUE2D_SRCDIR}/sim/simObject.h
	${TORQUE2D_SRCDIR}/sim/simObjectList.h
	${TORQUE2D_SRCDIR}/sim/simObjectPtr.h
	${TORQUE2D_SRCDIR}/sim/simSet.h
	${TORQUE2D_SRCDIR}/string/findMatch.h
	${TORQUE2D_SRCDIR}/string/stringBuffer.h
	${TORQUE2D_SRCDIR}/string/stringStack.h
	${TORQUE2D_SRCDIR}/string/stringTable.h
	${TORQUE2D_SRCDIR}/string/stringUnit.h
	${TORQUE2D_SRCDIR}/string/unicode.h
	${TORQUE2D_SRCDIR}/gui/buttons/guiBitmapButtonCtrl.h
	${TORQUE2D_SRCDIR}/gui/buttons/guiButtonBaseCtrl.h
	${TORQUE2D_SRCDIR}/gui/buttons/guiButtonCtrl.h
	${TORQUE2D_SRCDIR}/gui/buttons/guiCheckBoxCtrl.h
	${TORQUE2D_SRCDIR}/gui/buttons/guiIconButtonCtrl.h
	${TORQUE2D_SRCDIR}/gui/buttons/guiRadioCtrl.h
	${TORQUE2D_SRCDIR}/gui/buttons/guiToolboxButtonCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiAutoScrollCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiCtrlArrayCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiDragAndDropCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiDynamicCtrlArrayCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiFormCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiFrameCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiPaneCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiRolloutCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiScrollCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiStackCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiTabBookCtrl.h
	${TORQUE2D_SRCDIR}/gui/containers/guiWindowCtrl.h
	${TORQUE2D_SRCDIR}/gui/editor/guiDebugger.h
	${TORQUE2D_SRCDIR}/gui/editor/guiEditCtrl.h
	${TORQUE2D_SRCDIR}/gui/editor/guiFilterCtrl.h
	${TORQUE2D_SRCDIR}/gui/editor/guiGraphCtrl.h
	${TORQUE2D_SRCDIR}/gui/editor/guiImageList.h
	${TORQUE2D_SRCDIR}/gui/editor/guiInspector.h
	${TORQUE2D_SRCDIR}/gui/editor/guiInspectorTypes.h
	${TORQUE2D_SRCDIR}/gui/editor/guiMenuBar.h
	${TORQUE2D_SRCDIR}/gui/editor/guiSeparatorCtrl.h
	${TORQUE2D_SRCDIR}/testing/unitTesting.h
	${TORQUE2D_SRCDIR}/torqueConfig.h
)

#<ProjectReference Include="ljpeg.vcxproj">
#<ProjectReference Include="lpng.vcxproj">
#<ProjectReference Include="zlib.vcxproj">

add_library(ljpeg
        ${TORQUE2D_LIBDIR}/ljpeg/jcapimin.c
        ${TORQUE2D_LIBDIR}/ljpeg/jcapistd.c
        ${TORQUE2D_LIBDIR}/ljpeg/jccoefct.c
        ${TORQUE2D_LIBDIR}/ljpeg/jccolor.c
        ${TORQUE2D_LIBDIR}/ljpeg/jcdctmgr.c
        ${TORQUE2D_LIBDIR}/ljpeg/jchuff.c
        ${TORQUE2D_LIBDIR}/ljpeg/jcinit.c
        ${TORQUE2D_LIBDIR}/ljpeg/jcmainct.c
        ${TORQUE2D_LIBDIR}/ljpeg/jcmarker.c
        ${TORQUE2D_LIBDIR}/ljpeg/jcomapi.c
        ${TORQUE2D_LIBDIR}/ljpeg/jcparam.c
        ${TORQUE2D_LIBDIR}/ljpeg/jcphuff.c
        ${TORQUE2D_LIBDIR}/ljpeg/jcprepct.c
        ${TORQUE2D_LIBDIR}/ljpeg/jcsample.c
        ${TORQUE2D_LIBDIR}/ljpeg/jctrans.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdapimin.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdapistd.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdatadst.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdatasrc.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdcoefct.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdcolor.c
        ${TORQUE2D_LIBDIR}/ljpeg/jddctmgr.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdhuff.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdinput.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdmainct.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdmarker.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdmaster.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdmerge.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdphuff.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdpostct.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdsample.c
        ${TORQUE2D_LIBDIR}/ljpeg/jdtrans.c
        ${TORQUE2D_LIBDIR}/ljpeg/jerror.c
        ${TORQUE2D_LIBDIR}/ljpeg/jfdctflt.c
        ${TORQUE2D_LIBDIR}/ljpeg/jfdctfst.c
        ${TORQUE2D_LIBDIR}/ljpeg/jfdctint.c
        ${TORQUE2D_LIBDIR}/ljpeg/jidctflt.c
        ${TORQUE2D_LIBDIR}/ljpeg/jidctfst.c
        ${TORQUE2D_LIBDIR}/ljpeg/jidctint.c
        ${TORQUE2D_LIBDIR}/ljpeg/jidctred.c
        ${TORQUE2D_LIBDIR}/ljpeg/jmemansi.c
        ${TORQUE2D_LIBDIR}/ljpeg/jmemmgr.c
        ${TORQUE2D_LIBDIR}/ljpeg/jmemname.c
        ${TORQUE2D_LIBDIR}/ljpeg/jmemnobs.c
        ${TORQUE2D_LIBDIR}/ljpeg/jquant1.c
        ${TORQUE2D_LIBDIR}/ljpeg/jquant2.c
        ${TORQUE2D_LIBDIR}/ljpeg/jutils.c
)

if(WIN32)
	list(APPEND TORQUE2D_SRCS
		${TORQUE2D_SRCDIR}/platformWin32/nativeDialogs/win32FileDialog.cc
		${TORQUE2D_SRCDIR}/platformWin32/cardProfile.cpp
		${TORQUE2D_SRCDIR}/platformWin32/winAsmBlit.cc
		${TORQUE2D_SRCDIR}/platformWin32/winConsole.cc
		${TORQUE2D_SRCDIR}/platformWin32/winCPUInfo.cc
		${TORQUE2D_SRCDIR}/platformWin32/winDInputDevice.cc
		${TORQUE2D_SRCDIR}/platformWin32/winDirectInput.cc
		${TORQUE2D_SRCDIR}/platformWin32/winExec.cc
		${TORQUE2D_SRCDIR}/platformWin32/winFileio.cc
		${TORQUE2D_SRCDIR}/platformWin32/winFont.cc
		${TORQUE2D_SRCDIR}/platformWin32/winGL.cc
		${TORQUE2D_SRCDIR}/platformWin32/winGLSpecial.cc
		${TORQUE2D_SRCDIR}/platformWin32/winInput.cc
		${TORQUE2D_SRCDIR}/platformWin32/winMath.cc
		${TORQUE2D_SRCDIR}/platformWin32/winMath_ASM.cc
		${TORQUE2D_SRCDIR}/platformWin32/winMemory.cc
		${TORQUE2D_SRCDIR}/platformWin32/winNet.cc
		${TORQUE2D_SRCDIR}/platformWin32/winOGLVideo.cc
		${TORQUE2D_SRCDIR}/platformWin32/winOpenAL.cc
		${TORQUE2D_SRCDIR}/platformWin32/winProcessControl.cc
		${TORQUE2D_SRCDIR}/platformWin32/winSemaphore.cc
		${TORQUE2D_SRCDIR}/platformWin32/winStrings.cc
		${TORQUE2D_SRCDIR}/platformWin32/winTime.cc
		${TORQUE2D_SRCDIR}/platformWin32/winTLS.cc
		${TORQUE2D_SRCDIR}/platformWin32/winUser.cc
		${TORQUE2D_SRCDIR}/platformWin32/winVFS.cc
		${TORQUE2D_SRCDIR}/platformWin32/winVideo.cc
		${TORQUE2D_SRCDIR}/platformWin32/winWindow.cc
		${TORQUE2D_SRCDIR}/platformWin32/menus/popupMenuWin32.cc
		${TORQUE2D_SRCDIR}/platformWin32/nativeDialogs/win32DirectoryResolver.cpp
		${TORQUE2D_SRCDIR}/platformWin32/nativeDialogs/win32MsgBox.cpp
		${TORQUE2D_SRCDIR}/platformWin32/threads/mutex.cc
		${TORQUE2D_SRCDIR}/platformWin32/threads/thread.cc
	)

	include_directories(
		${TORQUE2D_LIBDIR}/openal/win32
		${TORQUE2D_LIBDIR}/zlib
		${TORQUE2D_LIBDIR}/lpng
	)
	list(APPEND TORQUE2D_LIBS
		COMCTL32
 		COMDLG32
 		USER32
 		ADVAPI32
 		GDI32
 		RPCRT4
 		WINMM
 		WSOCK32
 		VFW32
 		IMM32
 		UNICOWS
 		SHELL32
 		SHLWAPI
 		OLE32
	)
elseif(UNIX)
	list(APPEND TORQUE2D_SRCS
		${TORQUE2D_SRCDIR}/platform/platformNetAsync.unix.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXAsmBlit.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXConsole.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXCPUInfo.cc
# 		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXDedicatedStub.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXExec.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXFileio.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXFont.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXGL.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXInput.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXInputManager.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXIO.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXMath_ASM.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXMath.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXMemory.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXMessageBox.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXMutex.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXNet.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXOGLVideo.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXOpenAL.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXProcessControl.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXSemaphore.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXStrings.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXThread.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXTime.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXUser.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXUtils.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/x86UNIXWindow.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/menus/popupMenuX86UNIX.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/nativeDialogs/x86UNIXFileDialog.cc
		${TORQUE2D_SRCDIR}/platformX86UNIX/nativeDialogs/x86UNIXMsgBox.cc
	)

	find_package(SDL REQUIRED)
	find_package(Freetype REQUIRED)
	find_package(JPEG REQUIRED)
	find_package(PNG REQUIRED)
	find_package(OpenAL REQUIRED)
	find_package(OpenGL REQUIRED)
	if(NOT OPENGL_GLU_FOUND)
		message(FATAL "OpenGL GLU not found")
	endif()
	find_package(X11)
	if(NOT X11_Xft_FOUND)
		message(FATAL "X11 Xft not found")
	endif()
	include_directories(
		${TORQUE2D_LIBDIR}/openal/LINUX
		${FREETYPE_INCLUDE_DIRS}
		${SDL_INCLUDE_DIR}
		${JPEG_INCLUDE_DIR}
		${PNG_INCLUDE_DIR}
		${OPENAL_INCLUDE_DIR}
		${X11_Xft_INCLUDE_PATH}
		${OPENGL_INCLUDE_DIR}
	)
	list(APPEND TORQUE2D_LIBS
		pthread
		${FREETYPE_LIBRARIES}
		${SDL_LIBRARY}
		${JPEG_LIBRARIES}
		${PNG_LIBRARIES}
		${OPENAL_LIBRARY}
		${X11_Xft_LIB}
		${X11_LIBRARIES} # TODO use only libraries needed
		${CMAKE_DL_LIBS}
		${OPENGL_glu_LIBRARY}
	)
	# Required for nasm with math/*_ASM.asm
	list(APPEND TORQUE2D_PROPERTIES COMPILE_FLAGS -DLINUX)
	set(CMAKE_CXX_FLAGS "-m32 -fpermissive -w")
endif()


include_directories(
	${TORQUE2D_SRCDIR}
	${TORQUE2D_LIBDIR}/ljpeg
)

add_definitions(
	-DUNICODE
	-D_CRT_SECURE_NO_DEPRECATE
)

string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)

if(DEBUG STREQUAL BUILD_TYPE)
	include_directories(
		${TORQUE2D_SRCDIR}/testing/googleTest
		${TORQUE2D_SRCDIR}/testing/googleTest/include
	)

	add_definitions(
		-DTORQUE_DEBUG
		-DTORQUE_DEBUG_GUARD
	)

	set(TORQUE2D_TARGET Torque2D_DEBUG)
elseif(SHIPPING STREQUAL BUILD_TYPE)
	set(TORQUE2D_TARGET Torque2D)
else() # Release, includes unit tests
	include_directories(
		${TORQUE2D_SRCDIR}/testing/googleTest
		${TORQUE2D_SRCDIR}/testing/googleTest/include
	)

	set(TORQUE2D_TARGET Torque2D)
endif()


add_executable(${TORQUE2D_TARGET} ${TORQUE2D_SRCS} ${TORQUE2D_HEADERS})

target_link_libraries(${TORQUE2D_TARGET}
	ljpeg
	${TORQUE2D_LIBS}
)

if(TORQUE2D_PROPERTIES)
	set_target_properties(${TORQUE2D_TARGET} PROPERTIES
		${TORQUE2D_PROPERTIES}
	)
endif()
